--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "optimize-autoloader": true,
@@ -47,6 +48,12 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "test-unit": "./vendor/bin/phpunit --colors=always tests/Unit",
+        "test-functional": "./vendor/bin/phpunit --colors=always tests/Functional",
+        "test": [
+            "@test-unit",
+            "@test-functional"
         ]
     },
     "conflict": {
