--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "config": {
         "optimize-autoloader": true,
@@ -49,11 +50,19 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+        "cs-phpcs": "./vendor/bin/phpcs",
+        "cs": [
+            "@cs-phpcs"
+        ],
         "test-unit": "./vendor/bin/phpunit --colors=always tests/Unit",
         "test-functional": "./vendor/bin/phpunit --colors=always tests/Functional",
         "test": [
             "@test-unit",
             "@test-functional"
+        ],
+        "ci": [
+            "@cs",
+            "@test"
         ]
     },
     "conflict": {
