--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "php": ">=8",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^0.12.78",
+        "phpstan/phpstan-phpunit": "^0.12.17",
+        "phpstan/phpstan-symfony": "^0.12.20",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
@@ -60,6 +64,7 @@
         "cs-fix": [
             "./vendor/bin/ecs check src tests --ansi --config ecs.php --fix"
         ],
+        "static-analysis": "./vendor/bin/phpstan analyse --ansi",
         "test-unit": "./vendor/bin/phpunit --colors=always tests/Unit",
         "test-functional": "./vendor/bin/phpunit --colors=always tests/Functional",
         "test": [
@@ -68,6 +73,7 @@
         ],
         "ci": [
             "@cs",
+            "@static-analysis",
             "@test"
         ]
     },
