--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "phpstan/phpstan-symfony": "^0.12.21",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.5",
+        "symfony/maker-bundle": "^1.29",
         "symplify/easy-coding-standard": "^9.2"
     },
     "config": {
