--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,15 @@
         "php": ">=8",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
@@ -20,6 +25,7 @@
         "phpstan/phpstan-symfony": "^0.12.21",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.5",
+        "symfony/maker-bundle": "^1.29",
         "symplify/easy-coding-standard": "^9.2"
     },
     "config": {
