--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,13 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+        "db-setup": [
+            "php bin/console doctrine:database:create --if-not-exists --quiet",
+            "php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration --quiet"
+        ],
+        "db-destroy": [
+            "php bin/console doctrine:database:drop --if-exists --force --quiet"
+        ],
         "cs-ecs": "./vendor/bin/ecs check src tests --ansi --no-progress-bar --config ecs.php",
         "cs-phpcs": "./vendor/bin/phpcs",
         "cs": [
@@ -76,6 +83,16 @@
         "test": [
             "@test-unit",
             "@test-functional"
+        ],
+        "integration-pull": "docker-compose -f tests/docker/services-compose.yml pull",
+        "integration-start": "docker-compose -f tests/docker/services-compose.yml up -d",
+        "integration-status": "docker-compose -f tests/docker/services-compose.yml ps",
+        "integration-stop": "docker-compose -f tests/docker/services-compose.yml stop",
+        "integration-destroy": "docker-compose -f tests/docker/services-compose.yml down",
+        "integration-setup": [
+            "@integration-start",
+            "sleep 2",
+            "@db-setup"
         ],
         "ci": [
             "@cs",
