--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,4 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
+DATABASE_URL=postgresql://postgres:password!@0.0.0.0:5432/basil-worker-manager-db?serverVersion=13&charset=utf8
