--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,17 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.5",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^0.12.81",
         "phpstan/phpstan-phpunit": "^0.12.18",
         "phpstan/phpstan-symfony": "^0.12.21",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.5",
+        "symfony/browser-kit": "5.2.*",
         "symfony/maker-bundle": "^1.29",
-        "symplify/easy-coding-standard": "^9.2"
+        "symplify/easy-coding-standard": "^9.2",
+        "webignition/object-reflector": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
