--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,4 +21,7 @@
       <directory>tests</directory>
     </testsuite>
   </testsuites>
+  <extensions>
+    <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
+  </extensions>
 </phpunit>
