--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpstan/phpstan-phpunit": "^0.12.18",
         "phpstan/phpstan-symfony": "^0.12.21",
         "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.5",
+        "squizlabs/php_codesniffer": "dev-master",
         "symfony/browser-kit": "5.2.*",
         "symfony/maker-bundle": "^1.29",
         "symplify/easy-coding-standard": "^9.2",
