--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.5",
+        "mockery/mockery": "^1.4",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^0.12.81",
+        "phpstan/phpstan-mockery": "^0.12.13",
         "phpstan/phpstan-phpunit": "^0.12.18",
         "phpstan/phpstan-symfony": "^0.12.21",
         "phpunit/phpunit": "^9.5",
