--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,10 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8",
+        "ext-amqp": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
@@ -15,6 +17,7 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/messenger": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
