--- a/.env
+++ b/.env
@@ -33,3 +33,5 @@ DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVers
 MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+DIGITALOCEAN_ACCESS_TOKEN=digitalocean_access_token
