--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    digitalocean_access_token: '%env(DIGITALOCEAN_ACCESS_TOKEN)%'
 
 services:
     # default configuration for services in *this* file
@@ -29,3 +30,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    DigitalOceanV2\Client:
+        class: DigitalOceanV2\Client
+        calls:
+            - authenticate: ['%digitalocean_access_token%']
