--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/messenger": "5.2.*",
+        "symfony/monolog-bundle": "^3.6",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/yaml": "5.2.*",
         "toin0u/digitalocean-v2": "^4.2.1"
