--- a/.env
+++ b/.env
@@ -38,3 +38,4 @@ DIGITALOCEAN_ACCESS_TOKEN=digitalocean_access_token
 DIGITALOCEAN_REGION=lon1
 DIGITALOCEAN_SIZE=s-1vcpu-1gb
 DIGITALOCEAN_IMAGE=ubuntu-16-04-x64
+CREATE_RETRY_LIMIT=3
