--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/messenger": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/uid": "5.2.*",
         "symfony/yaml": "5.2.*",
         "toin0u/digitalocean-v2": "^4.2.1"
     },
