Prefix remote machine name with environment

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -22,6 +22,7 @@ services:
     App\Services\MachineProvider\DigitalOcean\DropletFactory:
         arguments:
             $dropletConfiguration: '@app.digitalocean.droplet_configuration.default'
+            $environment: '%env(APP_ENV)%'
 
     App\Services\MachineProvider:
         public: true
