--- a/config/services.yaml
+++ b/config/services.yaml
@@ -50,6 +50,7 @@ services:
     App\Services\MachineProvider\DigitalOcean\DropletFactory:
         arguments:
             $dropletConfiguration: '@app.digitalocean.droplet_configuration.default'
+            $environment: '%env(APP_ENV)%'
 
     App\Services\MachineProvider:
         arguments:
