--- a/.env
+++ b/.env
@@ -35,6 +35,7 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 ###< symfony/messenger ###
 
 DIGITALOCEAN_ACCESS_TOKEN=digitalocean_access_token
+DIGITALOCEAN_NAME_PREFIX=dev
 DIGITALOCEAN_REGION=lon1
 DIGITALOCEAN_SIZE=s-1vcpu-1gb
 DIGITALOCEAN_IMAGE=ubuntu-16-04-x64
