--- a/config/services.yaml
+++ b/config/services.yaml
@@ -41,6 +41,11 @@ services:
         calls:
             - authenticate: ['%digitalocean_access_token%']
 
+    DigitalOceanV2\Api\Droplet:
+        class: DigitalOceanV2\Api\Droplet
+        arguments:
+            $client: '@DigitalOceanV2\Client'
+
     app.digitalocean.droplet_configuration.default:
         class: App\Model\DigitalOcean\DropletConfiguration
         arguments:
