Create Guzzle client, inject info DO client

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,8 +36,21 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    GuzzleHttp\HandlerStack:
+        class: GuzzleHttp\HandlerStack
+        factory: ['GuzzleHttp\HandlerStack', 'create']
+
+    GuzzleHttp\Client:
+        class: GuzzleHttp\Client
+        arguments:
+            $config:
+                handler: '@GuzzleHttp\HandlerStack'
+
     DigitalOceanV2\Client:
         class: DigitalOceanV2\Client
+        factory: ['DigitalOceanV2\Client', 'createWithHttpClient']
+        arguments:
+            $httpClient: '@GuzzleHttp\Client'
         calls:
             - authenticate: ['%digitalocean_access_token%']
 
