Use http fixtures in DropFactory functional test

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -48,3 +48,13 @@ services:
         public: true
         arguments:
             $transport: '@messenger.transport.async'
+
+    GuzzleHttp\Handler\MockHandler:
+        public: true
+        class: GuzzleHttp\Handler\MockHandler
+
+    GuzzleHttp\HandlerStack:
+        class: GuzzleHttp\HandlerStack
+        factory: ['GuzzleHttp\HandlerStack', 'create']
+        arguments:
+            $handler: '@GuzzleHttp\Handler\MockHandler'
