--- a/.env
+++ b/.env
@@ -39,4 +39,5 @@ DIGITALOCEAN_NAME_PREFIX=dev
 DIGITALOCEAN_REGION=lon1
 DIGITALOCEAN_SIZE=s-1vcpu-1gb
 DIGITALOCEAN_IMAGE=ubuntu-16-04-x64
+DIGITALOCEAN_TAG=worker
 CREATE_RETRY_LIMIT=3
