--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,7 @@ parameters:
     digitalocean_droplet_image: '%env(DIGITALOCEAN_IMAGE)%'
     digitalocean_droplet_tag: '%env(DIGITALOCEAN_TAG)%'
     create_retry_limit: '%env(CREATE_RETRY_LIMIT)%'
+    update_worker_dispatch_delay: '%env(UPDATE_WORKER_DISPATCH_DELAY)%'
 
 services:
     # default configuration for services in *this* file
@@ -121,3 +122,7 @@ services:
                 create_failed: '@app.services.worker_state_transition_sequence.create_failed'
                 delete_failed: '@app.services.worker_state_transition_sequence.delete_failed'
                 delete_deleted: '@app.services.worker_state_transition_sequence.delete_deleted'
+
+    App\Services\UpdateWorkerMessageDispatcher:
+        arguments:
+            $dispatchDelayInSeconds: '%update_worker_dispatch_delay%'
