--- a/.env
+++ b/.env
@@ -41,3 +41,4 @@ DIGITALOCEAN_SIZE=s-1vcpu-1gb
 DIGITALOCEAN_IMAGE=ubuntu-16-04-x64
 DIGITALOCEAN_TAG=worker
 CREATE_RETRY_LIMIT=3
+UPDATE_WORKER_DISPATCH_DELAY=10
