Remove Worker::label

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -28,3 +28,6 @@ services:
                 create_failed: '@app.services.worker_state_transition_sequence.create_failed'
                 delete_failed: '@app.services.worker_state_transition_sequence.delete_failed'
                 delete_deleted: '@app.services.worker_state_transition_sequence.delete_deleted'
+
+    App\Tests\Services\EntityRefresher:
+        public: true
