--- a/config/services.yaml
+++ b/config/services.yaml
@@ -56,6 +56,9 @@ services:
         calls:
             - authenticate: ['%digitalocean_access_token%']
 
+    DigitalOceanV2\Api\Droplet:
+        class: DigitalOceanV2\Api\Droplet
+
     app.digitalocean.droplet_configuration.default:
         class: App\Model\DigitalOcean\DropletConfiguration
         arguments:
@@ -65,7 +68,7 @@ services:
             $tags:
                 - '%digitalocean_droplet_tag%'
 
-    App\Services\MachineProvider\DigitalOcean\DropletFactory:
+    App\Services\MachineProvider\DigitalOcean\DigitalOceanMachineProvider:
         arguments:
             $dropletConfiguration: '@app.digitalocean.droplet_configuration.default'
             $prefix: '%digitalocean_droplet_name_prefix%'
