--- a/.env
+++ b/.env
@@ -42,3 +42,4 @@ DIGITALOCEAN_IMAGE=ubuntu-16-04-x64
 DIGITALOCEAN_TAG=worker
 CREATE_RETRY_LIMIT=3
 UPDATE_WORKER_DISPATCH_DELAY=10
+UPDATE_RETRY_LIMIT=10
