--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,6 +12,7 @@ parameters:
     digitalocean_droplet_tag: '%env(DIGITALOCEAN_TAG)%'
     create_retry_limit: '%env(CREATE_RETRY_LIMIT)%'
     update_worker_dispatch_delay: '%env(UPDATE_WORKER_DISPATCH_DELAY)%'
+    update_retry_limit: '%env(UPDATE_RETRY_LIMIT)%'
 
 services:
     # default configuration for services in *this* file
@@ -86,6 +87,10 @@ services:
     App\Services\CreateMachineHandler:
         arguments:
             $retryLimit: '%create_retry_limit%'
+
+    App\Services\UpdateWorkerHandler:
+        arguments:
+            $retryLimit: '%update_retry_limit%'
 
     app.services.worker_state_transition_sequence.create_failed:
         class: App\Model\Worker\StateTransitionSequence
