--- a/config/services.yaml
+++ b/config/services.yaml
@@ -131,6 +131,6 @@ services:
                 delete_failed: '@app.services.worker_state_transition_sequence.delete_failed'
                 delete_deleted: '@app.services.worker_state_transition_sequence.delete_deleted'
 
-    App\Services\UpdateWorkerMessageDispatcher:
+    App\MessageDispatcher\UpdateWorkerMessageDispatcher:
         arguments:
             $dispatchDelayInSeconds: '%update_worker_dispatch_delay%'
