--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -3,6 +3,9 @@ services:
         autowire: true
         autoconfigure: true
 
+    App\Services\ExceptionFactory\MachineProvider\ExceptionFactory:
+        public: true
+
     Symfony\Component\Messenger\Transport\InMemoryTransport:
         alias: 'messenger.transport.async'
 
