--- a/config/services.yaml
+++ b/config/services.yaml
@@ -148,3 +148,9 @@ services:
             $factories:
                 - '@App\Services\ExceptionFactory\MachineProvider\DigitalOceanExceptionFactory'
                 - '@App\Services\ExceptionFactory\MachineProvider\GuzzleExceptionFactory'
+
+    App\MessageHandler\WorkerRequestMessageHandler:
+        arguments:
+            $handlers:
+                - '@App\Services\MachineHandler\CreateMachineHandler'
+                - '@App\Services\MachineHandler\UpdateWorkerHandler'
