--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,7 @@ parameters:
     digitalocean_droplet_image: '%env(DIGITALOCEAN_IMAGE)%'
     digitalocean_droplet_tag: '%env(DIGITALOCEAN_TAG)%'
     create_retry_limit: '%env(CREATE_RETRY_LIMIT)%'
-    update_worker_dispatch_delay: '%env(UPDATE_WORKER_DISPATCH_DELAY)%'
+    update_machine_dispatch_delay: '%env(UPDATE_MACHINE_DISPATCH_DELAY)%'
     update_retry_limit: '%env(UPDATE_RETRY_LIMIT)%'
 
 services:
@@ -90,19 +90,19 @@ services:
     app.message_dispatcher.create:
         class: App\MessageDispatcher\MachineRequestMessageDispatcher
 
-    app.message_dispatcher.update_worker:
+    app.message_dispatcher.update_machine:
         class: App\MessageDispatcher\MachineRequestMessageDispatcher
         arguments:
-            $dispatchDelayInSeconds: '%update_worker_dispatch_delay%'
+            $dispatchDelayInSeconds: '%update_machine_dispatch_delay%'
 
     App\Services\MachineHandler\CreateMachineHandler:
         arguments:
             $createDispatcher: '@app.message_dispatcher.create'
-            $updateMachineDispatcher: '@app.message_dispatcher.update_worker'
+            $updateMachineDispatcher: '@app.message_dispatcher.update_machine'
 
     App\Services\MachineHandler\UpdateMachineHandler:
         arguments:
-            $updateMachineDispatcher: '@app.message_dispatcher.update_worker'
+            $updateMachineDispatcher: '@app.message_dispatcher.update_machine'
 
     app.services.worker_state_transition_sequence.create_failed:
         class: App\Model\Machine\StateTransitionSequence
