--- a/config/services_integration_sync.yaml
+++ b/config/services_integration_sync.yaml
@@ -3,8 +3,8 @@ services:
         autowire: true
         autoconfigure: true
 
-    app.message_dispatcher.update_worker:
+    app.message_dispatcher.update_machine:
         class: App\MessageDispatcher\MachineRequestMessageDispatcher
         arguments:
-            $dispatchDelayInSeconds: '%update_worker_dispatch_delay%'
+            $dispatchDelayInSeconds: '%update_machine_dispatch_delay%'
             $enabled: false
