--- a/tests/docker/.env.dist
+++ b/tests/docker/.env.dist
@@ -1,8 +1,8 @@
-WORKER_POSTGRES_CONTAINER_NAME=postgres
-WORKER_POSTGRES_PASSWORD=password!
-WORKER_POSTGRES_EXPOSED_PORT=5432
+POSTGRES_CONTAINER_NAME=postgres
+POSTGRES_PASSWORD=password!
+POSTGRES_EXPOSED_PORT=5432
 
-WORKER_RABBITMQ_CONTAINER_NAME=rabbitmq
-WORKER_RABBITMQ_USER=guest
-WORKER_RABBITMQ_PASS=guest
-WORKER_RABBITMQ_EXPOSED_PORT=9502
+RABBITMQ_CONTAINER_NAME=rabbitmq
+RABBITMQ_USER=guest
+RABBITMQ_PASS=guest
+RABBITMQ_EXPOSED_PORT=9502
