--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,7 @@ parameters:
     digitalocean_droplet_image: '%env(DIGITALOCEAN_IMAGE)%'
     digitalocean_droplet_tag: '%env(DIGITALOCEAN_TAG)%'
     create_retry_limit: '%env(CREATE_RETRY_LIMIT)%'
-    update_worker_dispatch_delay: '%env(UPDATE_WORKER_DISPATCH_DELAY)%'
+    update_machine_dispatch_delay: '%env(UPDATE_MACHINE_DISPATCH_DELAY)%'
     update_retry_limit: '%env(UPDATE_RETRY_LIMIT)%'
 
 services:
@@ -88,60 +88,60 @@ services:
               !php/const App\Model\MachineProviderActionInterface::ACTION_GET: '%update_retry_limit%'
 
     app.message_dispatcher.create:
-        class: App\MessageDispatcher\WorkerRequestMessageDispatcher
+        class: App\MessageDispatcher\MachineRequestMessageDispatcher
 
-    app.message_dispatcher.update_worker:
-        class: App\MessageDispatcher\WorkerRequestMessageDispatcher
+    app.message_dispatcher.update_machine:
+        class: App\MessageDispatcher\MachineRequestMessageDispatcher
         arguments:
-            $dispatchDelayInSeconds: '%update_worker_dispatch_delay%'
+            $dispatchDelayInSeconds: '%update_machine_dispatch_delay%'
 
     App\Services\MachineHandler\CreateMachineHandler:
         arguments:
             $createDispatcher: '@app.message_dispatcher.create'
-            $updateWorkerDispatcher: '@app.message_dispatcher.update_worker'
+            $updateMachineDispatcher: '@app.message_dispatcher.update_machine'
 
-    App\Services\MachineHandler\UpdateWorkerHandler:
+    App\Services\MachineHandler\UpdateMachineHandler:
         arguments:
-            $updateWorkerDispatcher: '@app.message_dispatcher.update_worker'
+            $updateMachineDispatcher: '@app.message_dispatcher.update_machine'
 
-    app.services.worker_state_transition_sequence.create_failed:
-        class: App\Model\Worker\StateTransitionSequence
-        arguments:
-            $states:
-                - !php/const App\Model\Worker\State::VALUE_CREATE_RECEIVED
-                - !php/const App\Model\Worker\State::VALUE_CREATE_REQUESTED
-                - !php/const App\Model\Worker\State::VALUE_CREATE_FAILED
-
-    app.services.worker_state_transition_sequence.delete_failed:
-        class: App\Model\Worker\StateTransitionSequence
+    app.services.machine_state_transition_sequence.create_failed:
+        class: App\Model\Machine\StateTransitionSequence
         arguments:
             $states:
-                - !php/const App\Model\Worker\State::VALUE_CREATE_RECEIVED
-                - !php/const App\Model\Worker\State::VALUE_CREATE_REQUESTED
-                - !php/const App\Model\Worker\State::VALUE_UP_STARTED
-                - !php/const App\Model\Worker\State::VALUE_UP_ACTIVE
-                - !php/const App\Model\Worker\State::VALUE_DELETE_RECEIVED
-                - !php/const App\Model\Worker\State::VALUE_DELETE_REQUESTED
-                - !php/const App\Model\Worker\State::VALUE_DELETE_FAILED
+                - !php/const App\Model\Machine\State::VALUE_CREATE_RECEIVED
+                - !php/const App\Model\Machine\State::VALUE_CREATE_REQUESTED
+                - !php/const App\Model\Machine\State::VALUE_CREATE_FAILED
 
-    app.services.worker_state_transition_sequence.delete_deleted:
-        class: App\Model\Worker\StateTransitionSequence
+    app.services.machine_state_transition_sequence.delete_failed:
+        class: App\Model\Machine\StateTransitionSequence
         arguments:
             $states:
-                - !php/const App\Model\Worker\State::VALUE_CREATE_RECEIVED
-                - !php/const App\Model\Worker\State::VALUE_CREATE_REQUESTED
-                - !php/const App\Model\Worker\State::VALUE_UP_STARTED
-                - !php/const App\Model\Worker\State::VALUE_UP_ACTIVE
-                - !php/const App\Model\Worker\State::VALUE_DELETE_RECEIVED
-                - !php/const App\Model\Worker\State::VALUE_DELETE_REQUESTED
-                - !php/const App\Model\Worker\State::VALUE_DELETE_DELETED
+                - !php/const App\Model\Machine\State::VALUE_CREATE_RECEIVED
+                - !php/const App\Model\Machine\State::VALUE_CREATE_REQUESTED
+                - !php/const App\Model\Machine\State::VALUE_UP_STARTED
+                - !php/const App\Model\Machine\State::VALUE_UP_ACTIVE
+                - !php/const App\Model\Machine\State::VALUE_DELETE_RECEIVED
+                - !php/const App\Model\Machine\State::VALUE_DELETE_REQUESTED
+                - !php/const App\Model\Machine\State::VALUE_DELETE_FAILED
 
-    App\Services\WorkerStateTransitionSequences:
+    app.services.machine_state_transition_sequence.delete_deleted:
+        class: App\Model\Machine\StateTransitionSequence
+        arguments:
+            $states:
+                - !php/const App\Model\Machine\State::VALUE_CREATE_RECEIVED
+                - !php/const App\Model\Machine\State::VALUE_CREATE_REQUESTED
+                - !php/const App\Model\Machine\State::VALUE_UP_STARTED
+                - !php/const App\Model\Machine\State::VALUE_UP_ACTIVE
+                - !php/const App\Model\Machine\State::VALUE_DELETE_RECEIVED
+                - !php/const App\Model\Machine\State::VALUE_DELETE_REQUESTED
+                - !php/const App\Model\Machine\State::VALUE_DELETE_DELETED
+
+    App\Services\MachineStateTransitionSequences:
         arguments:
             $sequences:
-                create_failed: '@app.services.worker_state_transition_sequence.create_failed'
-                delete_failed: '@app.services.worker_state_transition_sequence.delete_failed'
-                delete_deleted: '@app.services.worker_state_transition_sequence.delete_deleted'
+                create_failed: '@app.services.machine_state_transition_sequence.create_failed'
+                delete_failed: '@app.services.machine_state_transition_sequence.delete_failed'
+                delete_deleted: '@app.services.machine_state_transition_sequence.delete_deleted'
 
     App\Services\ExceptionFactory\MachineProvider\ExceptionFactory:
         arguments:
@@ -149,8 +149,8 @@ services:
                 - '@App\Services\ExceptionFactory\MachineProvider\DigitalOceanExceptionFactory'
                 - '@App\Services\ExceptionFactory\MachineProvider\GuzzleExceptionFactory'
 
-    App\MessageHandler\WorkerRequestMessageHandler:
+    App\MessageHandler\MachineRequestMessageHandler:
         arguments:
             $handlers:
                 - '@App\Services\MachineHandler\CreateMachineHandler'
-                - '@App\Services\MachineHandler\UpdateWorkerHandler'
+                - '@App\Services\MachineHandler\UpdateMachineHandler'
