--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,6 +27,7 @@ services:
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
+            - '../src/Message/'
             - '../src/Kernel.php'
             - '../src/Tests/'
 
