--- a/.env
+++ b/.env
@@ -43,3 +43,6 @@ DIGITALOCEAN_TAG=worker
 CREATE_RETRY_LIMIT=3
 UPDATE_MACHINE_DISPATCH_DELAY=10
 UPDATE_RETRY_LIMIT=10
+MACHINE_EXISTS_DISPATCH_DELAY=10
+MACHINE_EXISTS_INITIAL_DISPATCH_DELAY=1
+EXISTS_RETRY_LIMIT=10
