--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,9 @@ parameters:
     create_retry_limit: '%env(CREATE_RETRY_LIMIT)%'
     update_machine_dispatch_delay: '%env(UPDATE_MACHINE_DISPATCH_DELAY)%'
     update_retry_limit: '%env(UPDATE_RETRY_LIMIT)%'
+    machine_exists_dispatch_delay: '%env(MACHINE_EXISTS_DISPATCH_DELAY)%'
+    machine_exists_initial_dispatch_delay: '%env(MACHINE_EXISTS_INITIAL_DISPATCH_DELAY)%'
+    exists_retry_limit: '%env(EXISTS_RETRY_LIMIT)%'
 
 services:
     # default configuration for services in *this* file
@@ -87,6 +90,7 @@ services:
             $retryLimits:
               !php/const App\Model\RemoteRequestActionInterface::ACTION_CREATE: '%create_retry_limit%'
               !php/const App\Model\RemoteRequestActionInterface::ACTION_GET: '%update_retry_limit%'
+              !php/const App\Model\RemoteRequestActionInterface::ACTION_EXISTS: '%exists_retry_limit%'
 
     app.message_dispatcher.create:
         class: App\MessageDispatcher\MachineRequestMessageDispatcher
@@ -95,6 +99,12 @@ services:
         class: App\MessageDispatcher\MachineRequestMessageDispatcher
         arguments:
             $dispatchDelayInSeconds: '%update_machine_dispatch_delay%'
+
+    app.message_dispatcher.machine_exists:
+        class: App\MessageDispatcher\MachineRequestMessageDispatcher
+        arguments:
+            $dispatchDelayInSeconds: '%machine_exists_dispatch_delay%'
+            $initialDispatchDelayInSeconds: '%machine_exists_initial_dispatch_delay%'
 
     App\MessageHandler\CreateMachineHandler:
         arguments:
